--- a/css/style.css
+++ b/css/style.css
@@ -234,9 +234,16 @@ color: rgba(255, 255, 255, 0.7);
     font-size: 36px;
     color: #FFFFFF;
 }
+a.ico{
+    color: #fff;
+    text-decoration: none;
+}
 @media (max-width: 768px){
     .bluebox{
         padding: 25px 40px;
+    }
+    .p-18, .pl-18, .w-20{
+        font-size: 16px;
     }
     .p-32{
         font-size: 24px;
