--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 nav{
     box-shadow: 0px 8px 30px rgba(93, 163, 238, 0.15);
+    background: rgba(255, 255, 255, 0.9);
 }
 a.nav-link{
     font-family: Source Sans Pro; 
